--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,6 +42,8 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: bundle install
+        run: bundle install
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: ./bin/publish
