--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,6 +44,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: bundle install
         run: bundle install
+      - name: module install
+        run: npm install
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: ./bin/publish
